--- a/fav/book/safari/bed-of-state/index.html
+++ b/fav/book/safari/bed-of-state/index.html
@@ -1,7 +1,7 @@
-<!--//Built by Softscape HTML Builder 3.0 http://www.ruanjing.com-->
+я╗┐<!--//Built by Softscape HTML Builder 3.0 http://www.ruanjing.com-->
 <html>
 <head>
-<title>─┐┬╝</title>
+<title>чЫох╜Х</title>
 <meta http-equiv="content-type" content="text/html; charset=gb2312">
 <link rel="stylesheet" href="jscss/file.css" type="text/css">
 </head>
@@ -22,8 +22,8 @@
 </table>
 <table frame=below rules=none align=center class=tt2 border=1 cellspacing=1 cellpadding=0 bordercolorlight=#c7c8d0 bordercolordark=#eeeeee>
 <tr align=center>
-<td class=d21><font class=f2>┴·┤▓г║14╩└╝═-17╩└╝═╡─┴∙╬╗╓╨╣·╗╩╡█</font></td>
-<td class=d22><font class=f2>╫ў╒▀г║└ю╜р╖╟</font></td>
+<td class=d21><font class=f2>щ╛Щх║Кя╝Ъ14ф╕Цч║к-17ф╕Цч║кчЪДхЕнф╜Нф╕нхЫ╜чЪЗх╕Э</font></td>
+<td class=d22><font class=f2>ф╜ЬшАЕя╝ЪцЭОц┤БщЭЮ</font></td>
 </tr>
 </table>
 <table align=center class=tt3 border=0 cellspacing=0 cellpadding=0>
@@ -55,7 +55,7 @@
 </table>
 <table align=center class=tm2 border=0 cellspacing=0 cellpadding=4>
 <tr align=center>
-<td><font class=f3>─┐┬╝</font></td>
+<td><font class=f3>чЫох╜Х</font></td>
 </tr>
 </table>
 <hr align=center class=hr1 size=1><br>
@@ -64,69 +64,69 @@
 <td>
 <span class=f1>
 <table frame=box rules=all width=490 align=center class=m1 border=0 cellspacing=0 cellpadding=5 bordercolorlight=#c88633 bordercolordark=#ebde99>
-<tr><td align=left class=m2>бд▓▌├з╓о╨█╓ь╘кш░бд</td></tr>
-<tr><td><A HREF="01.htm" >╥¤╫╙</A> бнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбб1</td></tr>
-<tr><td><A HREF="02.htm" >╦╡╖я╤Їгм╡└╖я╤Ї</A> бнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбб2</td></tr>
-<tr><td><A HREF="03.htm" >┤╦▓▌┐▄гм╖╟▒╦▓▌┐▄</A> бнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбб3</td></tr>
-<tr><td><A HREF="04.htm" >─р═╚╫╙╗╩╡█</A> бнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбб4</td></tr>
-<tr><td><A HREF="05.htm" >╥╗│п╚и╘┌╩╓</A> бнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбб5</td></tr>
-<tr><td><A HREF="06.htm" >╛╛│Ў╙ы┤Є╡╣</A> бнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбб6</td></tr>
-<tr><td><A HREF="07.htm" >╘й╗ъч╬ч┐</A> бнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбб7</td></tr>
-<tr><td><A HREF="08.htm" >╝п╚иг┐╝л╚иг┐</A> бнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбб8</td></tr>
-<tr><td><A HREF="09.htm" >╬─╫╓╙№▒│║є╡─╨─╠м</A> бнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбб9</td></tr>
-<tr><td><A HREF="10.htm" >╗·╣╪╦у╛б╠л┤╧├ў</A> бнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбн 10</td></tr>
-<tr><td><A HREF="11.htm" >╫в╩═</A> бнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбн 11</td></tr>
-<tr><td align=left class=m2>бд╬▒╛¤╫╙╓ьщжбд</td></tr>
-<tr><td><A HREF="12.htm" >╬г╗·гм▓в╖╟╟╔║╧</A> бнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбн 12</td></tr>
-<tr><td><A HREF="13.htm" >╥є║ь╡─╤к</A> бнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбн 13</td></tr>
-<tr><td><A HREF="14.htm" >╤р═ї╡╟╗∙</A> бнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбн 14</td></tr>
-<tr><td><A HREF="15.htm" >б░║╧╖и╨╘б▒╡─├╬ў╩</A> бнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбн 15</td></tr>
-<tr><td><A HREF="16.htm" >─╤╡├╨─░▓</A> бнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбн 16</td></tr>
-<tr><td><A HREF="17.htm" >╢ё╓о╗и╥╗г║╛л╔ёу▐║ж</A> бнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбн 17</td></tr>
-<tr><td><A HREF="18.htm" >╢ё╓о╗и╢■г║╥╨╙├╗┬╣┘</A> бнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбн 18</td></tr>
-<tr><td><A HREF="19.htm" >╢ё╓о╗и╚¤г║╣·╝╥┐╓▓└╓ў╥х</A> бнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбн 19</td></tr>
-<tr><td><A HREF="20.htm" >╣жьгг┐╣¤ьгг┐</A> бнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбн 20</td></tr>
-<tr><td><A HREF="21.htm" >╡└╡┬╗п▒й╛¤</A> бнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбн 21</td></tr>
-<tr><td><A HREF="22.htm" >╫в╩═</A> бнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбн 22</td></tr>
-<tr><td align=left class=m2>бд╓ь║ё╒╒г║╥╗▓╗┴Ї╔ё╡▒┴╦╗╩╡█бд</td></tr>
-<tr><td><A HREF="23.htm" >╥¤╫╙</A> бнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбн 23</td></tr>
-<tr><td><A HREF="24.htm" >╓ь║ё╒╒╩╟╦н</A> бнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбн 24</td></tr>
-<tr><td><A HREF="25.htm" >╫ц╫┌├╟</A> бнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбн 25</td></tr>
-<tr><td><A HREF="26.htm" >╔э╩└╓о├╒╙ы╬╤─╥░╓░╓</A> бнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбн 26</td></tr>
-<tr><td><A HREF="27.htm" >╚ч╣√╠ь╫╙╩╟╔┘─ъ</A> бнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбн 27</td></tr>
-<tr><td><A HREF="28.htm" >╒■▒ф</A> бнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбн 28</td></tr>
-<tr><td><A HREF="29.htm" >╒■▒ф╓╨╡─╚╦╬я║═╙р╨ў</A> бнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбн 29</td></tr>
-<tr><td><A HREF="30.htm" >▒к╖┐├╪╩╖</A> бнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбн 30</td></tr>
-<tr><td><A HREF="31.htm" >╣т╚┘╙ы├╬╧ы</A> бнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбн 31</td></tr>
-<tr><td><A HREF="32.htm" >╦лб░▒жб▒║╧╠х</A> бнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбн 32</td></tr>
-<tr><td><A HREF="33.htm" >╫в╩═</A> бнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбн 33</td></tr>
-<tr><td align=left class=m2>бд╝╬╛╕г║═Є╦ъгм▒▌╧┬бд</td></tr>
-<tr><td><A HREF="34.htm" >╥¤╫╙</A> бнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбн 34</td></tr>
-<tr><td><A HREF="35.htm" >┤╙╩└╫╙╡╜╡█╛¤</A> бнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбн 35</td></tr>
-<tr><td><A HREF="36.htm" >б░┤є└ёб▒╓о╥щ</A> бнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбн 36</td></tr>
-<tr><td><A HREF="37.htm" >б░┤є└ё╥щб▒┐┤╡у</A> бнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбн 37</td></tr>
-<tr><td><A HREF="38.htm" >╝╬╛╕╙ы├ў┤·╩┐╖ч</A> бнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбн 38</td></tr>
-<tr><td><A HREF="39.htm" >╤╧с╘╡─▒п╧▓╛ч</A> бнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбн 39</td></tr>
-<tr><td><A HREF="40.htm" >╦└╡├╞ф╦∙</A> бнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбн 40</td></tr>
-<tr><td><A HREF="41.htm" >╫в╩═</A> бнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбн 41</td></tr>
-<tr><td align=left class=m2>бд─╤╨╓─╤╡▄г║╙╔╨г║═╙╔╝ьбд</td></tr>
-<tr><td><A HREF="42.htm" >╥¤╫╙</A> бнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбн 42</td></tr>
-<tr><td><A HREF="43.htm" >1620─ъ</A> бнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбн 43</td></tr>
-<tr><td><A HREF="44.htm" >ух║я╢°╣┌</A> бнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбн 44</td></tr>
-<tr><td><A HREF="45.htm" >┐═╩╧</A> бнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбн 45</td></tr>
-<tr><td><A HREF="46.htm" >╬║╓╥╧═</A> бнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбн 46</td></tr>
-<tr><td><A HREF="47.htm" >╡│╗Ў</A> бнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбн 47</td></tr>
-<tr><td><A HREF="48.htm" >│╛░г┬ф╢и</A> бнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбн 48</td></tr>
-<tr><td><A HREF="49.htm" >╒т╕Ў╗╩╡█▓╗╧э╕г</A> бнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбн 49</td></tr>
-<tr><td><A HREF="50.htm" >╛¤│╝╓о╝ф</A> бнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбн 50</td></tr>
-<tr><td><A HREF="51.htm" >╔╜╟ю╦о╛б</A> бнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбн 51</td></tr>
-<tr><td><A HREF="52.htm" >┴╜╕Ў┼╤═╢╒▀</A> бнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбн 52</td></tr>
-<tr><td><A HREF="53.htm" >─й╚╒╟щ╛░</A> бнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбн 53</td></tr>
-<tr><td><A HREF="54.htm" >│чьї╡─╦└г║┤є╜с╛╓</A> бнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбн 54</td></tr>
-<tr><td><A HREF="55.htm" >╫в╩═</A> бнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбн 55</td></tr>
-<tr><td><A HREF="56.htm" >║є╝╟</A> бнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбнбн 56</td></tr>
+<tr><td align=left class=m2>┬╖шНЙшО╜ф╣ЛщЫДцЬ▒хЕГчТЛ┬╖</td></tr>
+<tr><td><A HREF="01.htm" >х╝ХхнР</A> тАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжуАА1</td></tr>
+<tr><td><A HREF="02.htm" >шп┤хЗдщШ│я╝МщБУхЗдщШ│</A> тАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжуАА2</td></tr>
+<tr><td><A HREF="03.htm" >цндшНЙхпЗя╝МщЭЮх╜╝шНЙхпЗ</A> тАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжуАА3</td></tr>
+<tr><td><A HREF="04.htm" >ц│ешЕ┐хнРчЪЗх╕Э</A> тАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжуАА4</td></tr>
+<tr><td><A HREF="05.htm" >ф╕АцЬЭцЭГхЬицЙЛ</A> тАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжуАА5</td></tr>
+<tr><td><A HREF="06.htm" >цПкхЗ║ф╕ОцЙУхАТ</A> тАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжуАА6</td></tr>
+<tr><td><A HREF="07.htm" >хЖдщнВч╝еч╝И</A> тАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжуАА7</td></tr>
+<tr><td><A HREF="08.htm" >щЫЖцЭГя╝ЯцЮБцЭГя╝Я</A> тАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжуАА8</td></tr>
+<tr><td><A HREF="09.htm" >цЦЗхнЧчЛ▒шГМхРОчЪДх┐ГцАБ</A> тАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжуАА9</td></tr>
+<tr><td><A HREF="10.htm" >цЬ║хЕ│чоЧх░╜хдкшБкцШО</A> тАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАж 10</td></tr>
+<tr><td><A HREF="11.htm" >ц│ищЗК</A> тАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАж 11</td></tr>
+<tr><td align=left class=m2>┬╖ф╝кхРЫхнРцЬ▒цгг┬╖</td></tr>
+<tr><td><A HREF="12.htm" >хН▒цЬ║я╝Мх╣╢щЭЮх╖зхРИ</A> тАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАж 12</td></tr>
+<tr><td><A HREF="13.htm" >цо╖ч║вчЪДшбА</A> тАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАж 13</td></tr>
+<tr><td><A HREF="14.htm" >чЗХчОЛчЩ╗хЯ║</A> тАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАж 14</td></tr>
+<tr><td><A HREF="15.htm" >тАЬхРИц│ХцАзтАЭчЪДцвжщнЗ</A> тАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАж 15</td></tr>
+<tr><td><A HREF="16.htm" >щЪ╛х╛Чх┐ГхоЙ</A> тАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАж 16</td></tr>
+<tr><td><A HREF="17.htm" >цБ╢ф╣ЛшК▒ф╕Ая╝Ъч▓╛чеЮцИХхо│</A> тАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАж 17</td></tr>
+<tr><td><A HREF="18.htm" >цБ╢ф╣ЛшК▒ф║Мя╝ЪхАЪчФихожхоШ</A> тАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАж 18</td></tr>
+<tr><td><A HREF="19.htm" >цБ╢ф╣ЛшК▒ф╕Йя╝ЪхЫ╜хо╢цБРцАЦф╕╗ф╣Й</A> тАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАж 19</td></tr>
+<tr><td><A HREF="20.htm" >хКЯцмдя╝Яш┐Зцмдя╝Я</A> тАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАж 20</td></tr>
+<tr><td><A HREF="21.htm" >щБУх╛╖хМЦцЪ┤хРЫ</A> тАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАж 21</td></tr>
+<tr><td><A HREF="22.htm" >ц│ищЗК</A> тАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАж 22</td></tr>
+<tr><td align=left class=m2>┬╖цЬ▒хОЪчЕзя╝Ъф╕Аф╕НчХЩчеЮх╜Уф║ЖчЪЗх╕Э┬╖</td></tr>
+<tr><td><A HREF="23.htm" >х╝ХхнР</A> тАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАж 23</td></tr>
+<tr><td><A HREF="24.htm" >цЬ▒хОЪчЕзцШпш░Б</A> тАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАж 24</td></tr>
+<tr><td><A HREF="25.htm" >чеЦхоЧф╗м</A> тАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАж 25</td></tr>
+<tr><td><A HREF="26.htm" >ш║лф╕Цф╣Лш░Ьф╕ОчкЭхЫКчИ╕чИ╕</A> тАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАж 26</td></tr>
+<tr><td><A HREF="27.htm" >хжВцЮЬхдйхнРцШпх░Сх╣┤</A> тАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАж 27</td></tr>
+<tr><td><A HREF="28.htm" >цФ┐хПШ</A> тАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАж 28</td></tr>
+<tr><td><A HREF="29.htm" >цФ┐хПШф╕нчЪДф║║чЙйхТМф╜Щч╗к</A> тАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАж 29</td></tr>
+<tr><td><A HREF="30.htm" >ш▒╣цИ┐чзШхП▓</A> тАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАж 30</td></tr>
+<tr><td><A HREF="31.htm" >хЕЙшНгф╕ОцвжцГ│</A> тАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАж 31</td></tr>
+<tr><td><A HREF="32.htm" >хПМтАЬхоЭтАЭхРИф╜У</A> тАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАж 32</td></tr>
+<tr><td><A HREF="33.htm" >ц│ищЗК</A> тАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАж 33</td></tr>
+<tr><td align=left class=m2>┬╖хШЙщЭЦя╝Ъф╕Зх▓Бя╝МщЩЫф╕Л┬╖</td></tr>
+<tr><td><A HREF="34.htm" >х╝ХхнР</A> тАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАж 34</td></tr>
+<tr><td><A HREF="35.htm" >ф╗Оф╕ЦхнРхИ░х╕ЭхРЫ</A> тАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАж 35</td></tr>
+<tr><td><A HREF="36.htm" >тАЬхдзчд╝тАЭф╣Лшоо</A> тАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАж 36</td></tr>
+<tr><td><A HREF="37.htm" >тАЬхдзчд╝шоотАЭчЬЛчВ╣</A> тАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАж 37</td></tr>
+<tr><td><A HREF="38.htm" >хШЙщЭЦф╕ОцШОф╗гхглщгО</A> тАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАж 38</td></tr>
+<tr><td><A HREF="39.htm" >ф╕ех╡йчЪДцВ▓хЦЬхЙз</A> тАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАж 39</td></tr>
+<tr><td><A HREF="40.htm" >цн╗х╛ЧхЕ╢цЙА</A> тАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАж 40</td></tr>
+<tr><td><A HREF="41.htm" >ц│ищЗК</A> тАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАж 41</td></tr>
+<tr><td align=left class=m2>┬╖щЪ╛хЕДщЪ╛х╝Яя╝ЪчФ▒цабхТМчФ▒цгА┬╖</td></tr>
+<tr><td><A HREF="42.htm" >х╝ХхнР</A> тАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАж 42</td></tr>
+<tr><td><A HREF="43.htm" >1620х╣┤</A> тАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАж 43</td></tr>
+<tr><td><A HREF="44.htm" >ц▓РчМ┤шАМхЖа</A> тАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАж 44</td></tr>
+<tr><td><A HREF="45.htm" >ховц░П</A> тАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАж 45</td></tr>
+<tr><td><A HREF="46.htm" >щнПх┐аш┤д</A> тАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАж 46</td></tr>
+<tr><td><A HREF="47.htm" >хЕЪче╕</A> тАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАж 47</td></tr>
+<tr><td><A HREF="48.htm" >х░ШхЯГшР╜хоЪ</A> тАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАж 48</td></tr>
+<tr><td><A HREF="49.htm" >ш┐Щф╕кчЪЗх╕Эф╕Нф║лчжП</A> тАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАж 49</td></tr>
+<tr><td><A HREF="50.htm" >хРЫшЗгф╣ЛщЧ┤</A> тАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАж 50</td></tr>
+<tr><td><A HREF="51.htm" >х▒▒чй╖ц░┤х░╜</A> тАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАж 51</td></tr>
+<tr><td><A HREF="52.htm" >ф╕дф╕кхПЫцКХшАЕ</A> тАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАж 52</td></tr>
+<tr><td><A HREF="53.htm" >цЬлцЧецГЕцЩп</A> тАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАж 53</td></tr>
+<tr><td><A HREF="54.htm" >х┤ЗчепчЪДцн╗я╝Ъхдзч╗Ух▒А</A> тАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАж 54</td></tr>
+<tr><td><A HREF="55.htm" >ц│ищЗК</A> тАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАж 55</td></tr>
+<tr><td><A HREF="56.htm" >хРОшо░</A> тАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАжтАж 56</td></tr>
 </table>
-<p>бббб<font class=f4>б∙░ц▒╛│Ў┤жг║╨┬└╦╢┴╩щ╞╡╡└б∙</font>
+<p>уААуАА<font class=f4>тА╗чЙИцЬмхЗ║хдДя╝ЪцЦ░ц╡кшп╗ф╣жщвСщБУтА╗</font>
 </span>
 </td>
 </tr>
@@ -151,16 +151,16 @@
 </table>
 <table align=center class=tb2 border=0 cellspacing=0 cellpadding=0>
 <tr align=center>
-<td class=d53><a href=56.htm class=f5>╔╧╥╗╥│</a></td>
-<td class=d54><a href=cover.html class=f5>╗╪╖т├ц</a></td>
-<td class=d55><a href=01.htm class=f5>╧┬╥╗╥│</a></td>
+<td class=d53><a href=56.htm class=f5>ф╕Кф╕Ащб╡</a></td>
+<td class=d54><a href=cover.html class=f5>хЫЮх░БщЭв</a></td>
+<td class=d55><a href=01.htm class=f5>ф╕Лф╕Ащб╡</a></td>
 </tr>
 </table>
 <table frame=above rules=none align=center class=tb3 border=1 cellspacing=1 cellpadding=0 bordercolorlight=#c7c8d0 bordercolordark=#eeeeee>
 <tr align=center>
-<td class=d81><font class=f2>б░╥╫╦о╬ў╖чб▒E╩щ╫ў╞╖</font></td>
+<td class=d81><font class=f2>тАЬцШУц░┤ше┐щгОтАЭEф╣жф╜ЬхУБ</font></td>
 <td class=d83><font class=f2></font></td>
-<td class=d82><font class=f2>╕№╢р╛л▓╩E╩щ╟ы╖├╬╩б░<a href=http://www.52ebook.com class=f8>52ebook</a>б▒</font></td>
+<td class=d82><font class=f2>цЫ┤хдЪч▓╛х╜йEф╣жшп╖шо┐щЧотАЬ<a href=http://www.52ebook.com class=f8>52ebook</a>тАЭ</font></td>
 </tr>
 </table>
 <table align=center class=tb4 border=0 cellspacing=0 cellpadding=0>
@@ -181,20 +181,20 @@
 <tr>
 <td class=dbottom1><script language="javascript" src="jscss/date_time.js"></script></td>
 <td class=dbottom2><font class=f9><script language="javascript" src="jscss/message.js"></script></font></td>
-<td class=dbottom3><font class=f9>─┐┬╝</font></td>
+<td class=dbottom3><font class=f9>чЫох╜Х</font></td>
 </tr>
 </table>
 </div>
 <div class=toolbar2>
 <table frame=box rules=all align=center class=tlink border=1 cellspacing=2 cellpadding=0 bordercolorlight=#504f64 bordercolordark=#b4b2cc>
 <tr align=center>
-<td><a href=#top class=fl><img src=image/top.gif border=0 alt=╥│╩╫></a></td>
+<td><a href=#top class=fl><img src=image/top.gif border=0 alt=щб╡щжЦ></a></td>
 </tr>
 <tr align=center>
-<td><a href=56.htm class=fl><img src=image/back.gif border=0 alt=╔╧╥│></a><a href=cover.html class=fl><img src=image/return.gif border=0 alt=╖т├ц></a><a href=01.htm class=fl><img src=image/next.gif border=0 alt=╧┬╥│></a></td>
+<td><a href=56.htm class=fl><img src=image/back.gif border=0 alt=ф╕Кщб╡></a><a href=cover.html class=fl><img src=image/return.gif border=0 alt=х░БщЭв></a><a href=01.htm class=fl><img src=image/next.gif border=0 alt=ф╕Лщб╡></a></td>
 </tr>
 <tr align=center>
-<td><a href=#bottom class=fl><img src=image/bottom.gif border=0 alt=╥│╬▓></a></td>
+<td><a href=#bottom class=fl><img src=image/bottom.gif border=0 alt=щб╡х░╛></a></td>
 </tr>
 </table>
 </div>
