--- a/fav/book/safari/bed-of-state/11.htm
+++ b/fav/book/safari/bed-of-state/11.htm
@@ -1,7 +1,7 @@
-<!--//Built by Softscape HTML Builder 3.0 http://www.ruanjing.com-->
+ï»¿<!--//Built by Softscape HTML Builder 3.0 http://www.ruanjing.com-->
 <html>
 <head>
-<title>×¢ÊÍ</title>
+<title>æ³¨é‡Š</title>
 <meta http-equiv="content-type" content="text/html; charset=gb2312">
 <link rel="stylesheet" href="jscss/file.css" type="text/css">
 </head>
@@ -22,8 +22,8 @@
 </table>
 <table frame=below rules=none align=center class=tt2 border=1 cellspacing=1 cellpadding=0 bordercolorlight=#c7c8d0 bordercolordark=#eeeeee>
 <tr align=center>
-<td class=d21><font class=f2>Áú´²£º14ÊÀ¼Í-17ÊÀ¼ÍµÄÁùÎ»ÖÐ¹ú»ÊµÛ</font></td>
-<td class=d22><font class=f2>²ÝÃ§Ö®ÐÛÖìÔªè°</font></td>
+<td class=d21><font class=f2>é¾™åºŠï¼š14ä¸–çºª-17ä¸–çºªçš„å…­ä½ä¸­å›½çš‡å¸</font></td>
+<td class=d22><font class=f2>è‰èŽ½ä¹‹é›„æœ±å…ƒç’‹</font></td>
 </tr>
 </table>
 <table align=center class=tt3 border=0 cellspacing=0 cellpadding=0>
@@ -55,7 +55,7 @@
 </table>
 <table align=center class=tm2 border=0 cellspacing=0 cellpadding=4>
 <tr align=center>
-<td><font class=f3>×¢ÊÍ</font></td>
+<td><font class=f3>æ³¨é‡Š</font></td>
 </tr>
 </table>
 <hr align=center class=hr1 size=1><br>
@@ -65,9 +65,9 @@
 <span class=f1>
 <p>
 <!--HTMLBUILERPART0-->
-¡¡¡¡{1}ÔªË³µÛÄêºÅ¡£<BR><BR>¡¡¡¡{2}ÎÒ¸öÈË²»°ÑººÖ®´úÇØ£¬ÊÓÎªÅ©Ãñ±©¶¯µÄ½á¹û¡£ººÖ®´úÇØ£¬Ó¦ÊôÓÚÕ½¹úÒÔÀ´¡°ÇØ£­Áù¹ú¡±»¥¶¯¹ØÏµµÄ½øÒ»²½ÑÝ±ä£¬³ÂÊ¤¡¢Îâ¹ãÆðÒåÖ»ÊÇÕâÖÖ¹ØÏµµÄÏÈÆÚÐ§Ó¦¡£´ËÒâ£¬¶ÅÄÁµÄ¡¶°¢·¿¹¬¸³¡··ÖÎö½âÊÍµÄ¼«ÊÇ£º¡°ÃðÁù¹úÕß£¬Áù¹úÒ²£¬·ÇÇØÒ²¡£×åÇØÕß£¬ÇØÒ²£¬·ÇÌìÏÂÒ²¡£àµºõ£¡Ê¹Áù¹ú¸÷°®ÆäÈË£¬Ôò×ãÒÔ¾ÜÇØ£»Ê¹ÇØ¸´°®Áù¹úÖ®ÈË£¬ÔòµÝÈýÊÀ¿ÉÖÁÍòÊÀ¶øÎª¾ý£¬Ë­µÃ¶ø×åÃðÒ²£¿¡±<BR><BR>¡¡¡¡{3}{4}¡¶Ã÷Ê·¡·£¬ÁÐ´«µÚÊ®ËÄ¡£<BR><BR>¡¡¡¡{5}¡¶Ã÷Ê·¡·£¬ÁÐ´«µÚ¶þÊ®¡£<BR><BR>¡¡¡¡{6}¡¶ÓùÖÆ»ÊÁê±®¡·¡£<BR><BR>¡¡¡¡{7}¡¶»ÊÃ÷±¾¼Í¡·£º¡°¡¾Ì«×æ¡¿¸´Èë»Ê¾õËÂ£¬Ê¼ÖªÁ¢Ö¾ÇÚÑ§¡£¡±<BR><BR>¡¡¡¡{8}Óà¼ÌµÇ£º¡¶µä¹Ê¼ÍÎÅ¡·£¬¾íÒ»¡£<BR><BR>¡¡¡¡{9}ÃÏêÆ£¬Îå´úÊ®¹úÊ±ÆÚºóÊñºóÖ÷£¬¹«Ôª934Äê£­965ÄêÔÚÎ»¡£¹úÍö£¬½µËÎ£¬·âÇØ¹ú¹«¡£´«´ËÈËÇîÉÝ¼«Óû£¬Á¬ÈöÄòµÄ±ãÆ÷£¬Ò²ÊÇÓñÆ÷Ïâ×Å±¦Ê¯×ö³É¡£µ«ºóÈËÓÐÒÉ´ËÎªËÎÌ«×æÕÔ¿ïØ·Îª°Ü»µÃÏêÆÃûÓþ¶ø±àÔìµÄ¹ÊÊÂ£¬ÓëÕâËµ·¨ÏàÃ¬¶ÜµÄ£¬¾ÝËµÃÏêÆÖ÷ÊñÆÚ¼ä£¬ÆÄÊÜ°ÙÐÕ°®´÷¡£<BR><BR>¡¡¡¡{10}Óà¼ÌµÇ£º¡¶µä¹Ê¼ÍÎÅ¡·£¬¾íÒ»¡£<BR><BR>¡¡¡¡{11}½âçÆ£º¡¶ÌìäêÓñëº¡·¡£°´£¬´ËÊéÔ­²»Öø×«ÕßÃûÊÏ£¬µ«Ã÷¡¶¼ÍÂ¼»ã±à¡·¡¢Çå¡¶Ê¤³¯ÒÅÊÂ¡·ÊÕ±à´ËÊéÊ±£¬ÌâÎª½âçÆ×«¡£´ËËµÓÐÒ»¶¨ºÏÀíÐÔ£¬Òò¡¶ÌìäêÓñëº¡·ÏµÖìé¦´ÛÎ»ºó£¬³öÓÚÍ¿¸ÄÀúÊ·ÐèÒª£¬ÍÆ³öµÄÖîÖÖ³ö°æÎïÖ®Ò»£¬¶ø½âçÆ×÷Îªµ±Ê±µÄÖ÷ÒªÎÄ³¼£¬ºÜ¿ÉÄÜ»áÖ÷³ÖËüµÄ±àÐ´¡£¹Ã´æÒÉ¡£<BR><BR>¡¡¡¡{12}ÎÞÃûÊÏ£º¡¶ôåÊ¤Ò°ÎÅ¡·¡£<BR><BR>¡¡¡¡{13}¡¶¹ú³õÊÂ¼£¡·¡£<BR><BR>¡¡¡¡{14}¡°Èý½Ü¡±£¬Ö¸ÏôºÎ¡¢º«ÐÅ¡¢ÕÅÁ¼¡£<BR><BR>¡¡¡¡{15}ÀîÉÆ³¤£¬·âº«¹ú¹«¡£<BR><BR>¡¡¡¡{16}Ðì´ï£¬·âÎº¹ú¹«¡£<BR><BR>¡¡¡¡{17}Áõ»ù£¨²®ÎÂ£©£¬·â³ÏÒâ²®¡£<BR><BR>¡¡¡¡{18}µËÊ¿Áú¼­£º¡¶¹ú³¯µä¹Ê¡·£¬Ò°¼ÇÒ»¡£<BR><BR>¡¡¡¡{19}ÃÏÉ­£º¡¶Ã÷ÇåÊ·½²Òå¡·¡£<BR><BR>¡¡¡¡{20}¡¶Ã÷Ê·¡·£¬Ö¾µÚÎåÊ®Èý£¬Ê³»õÒ»¡£<BR><BR>¡¡¡¡{21}Î¤ÇìÔ¶£º¡¶Ã÷´ú»Æ²áÖÆ¶È¡·¡£<BR><BR>¡¡¡¡{22}ÃÏÉ­£º¡¶Ã÷ÇåÊ·½²Òå¡·¡£<BR><BR>¡¡¡¡{23}ÎÞÃûÊÏ£º¡¶»ÊÃ÷±¾¼Í¡·¡£<BR><BR>¡¡¡¡{24}¡¶µä¹Ê¼ÍÎÅ¡·£¬¾íÒ»¡£ÒÔÏÂËùÊöÖîÊÂ¼°ÖìÔªè°ÑÔÂÛ£¬¶à¾Ý´ËÊé£¬²»×¸Ò»Ò»¡£<BR><BR>¡¡¡¡{25}ÖìÔªè°»­Ïñ£¬×îÖøÃûµÄÓÐÁ½·ù£¬Ò»´æÓÚ±±¾©¹Ê¹¬²©ÎïÔº£¬Ò»ÐüÓÚÄÏ¾©Ã÷Ð¢ÁêÏíµîÄÚ£»Ç°ÕßÏµ¹¬Í¢»­¹¤ÃÀ»¯ÐÞÊÎµÄ½á¹û£¬ºóÕß²Å½Ó½üÖìÔªè°ÕæÈÝ£¬ÏÖÔÚÖÐÑ§¿Î±¾ÉÏµÄÖìÔªè°ÏñËùÒÀ¾ÝµÄ¾ÍÊÇÕâÒ»·ù¡£<BR><BR>¡¡¡¡{26}{27}¡¶Ã÷Ê·¡·£¬ÁÐ´«µÚÊ®Îå¡£<BR><BR>¡¡¡¡{28}¡¶ôåÊ¤Ò°ÎÅ¡·¡£<BR><BR>¡¡¡¡{29}¡¶¹ú³¯µä¹Ê¡·£¬Ò°¼ÇÒ»¡£<BR><BR>¡¡¡¡{30}³ÂÓÑÁÂµÄÍ·ºÅ´ó½«£¬ÔøÔÚÛ¶ÑôºþÒ»ÒÛÖÐÏÕÐ©»î×½ÖìÔªè°¡£<BR><BR>¡¡¡¡{31}±»ºì½í¾ü´´Ê¼ÈËÁõ¸£Í¨·îÎªÖ÷£¬³ÆµÛ£¬½¨¹úºÅ¡°ËÎ¡±£¬¼ÍÔªÁú·ï¡£ÖìÔªè°Ò»Ö±ÉÐ·îÆäºÅ£»º«ÁÖ¶ùËÀºóµÚ¶þÄê£¬¸Ä³ÆÎâÔªÄê£¬ÓÖÃ÷Äê¸Ä¹úºÅ¡°Ã÷¡±£¬¸ÄÔªºéÎä¡£<BR><BR>¡¡¡¡{32}¡¶ÓñÌÃ´ÔÓï¡·£¬ÑÔÓï¡£<BR><BR>¡¡¡¡{33}¡¶Ã÷Ê·¡·£¬ÁÐ´«µÚ¶þÊ®Îå¡£<BR><BR>¡¡¡¡{34}ÀÉçø£º¡¶ÆßÐÞÀà¸å¡·£¬¾íÈýÊ®ËÄ¡£<BR><BR>¡¡¡¡{35}Í¬ÉÏ£¬¾íÈýÊ®Æß¡£<BR><BR>¡¡¡¡{36}ÕÔÒí£º¡¶¶þÊ®¶þÊ·„ž¼Ç¡·£¬¾íÈýÊ®¶þ¡£<BR><BR>¡¡¡¡{37}»Ê¸¦Â¼£º¡¶»ÊÃ÷¼ÍÂÔ¡·£¬Æß¡£<BR><BR>¡¡¡¡{38}¡¶Ã÷Ê·¡·£¬ÁÐ´«µÚÒ»°ÙÆßÊ®Èý£¬ÎÄÔ·Ò»¡£<BR><BR>¡¡¡¡{39}×£ÔÊÃ÷£º¡¶Ò°¼Ç¡·¡£<BR><BR>¡¡¡¡{40}Ç®Ç«Òæ£º¡¶ÁÐ³¯Ê«¼¯¡·£¬¼×¼¯£¬¸ßÌ«Ê·Æô¡£<BR><BR>¡¡¡¡{41}Ðìá–£º¡¶±¾ÊÂÊ«¡·¡£<BR><BR>¡¡¡¡{42}¡¶ÃÏ×Ó¡¤Áº»ÝÍõÏÂ¡·¡£<BR><BR>¡¡¡¡{43}¡¶ÃÏ×Ó¡¤ÍòÕÂÏÂ¡·¡£<BR><BR>¡¡¡¡{44}¡¶öÚˆÎÍ¤¼¯¡·£¬¾íÈýÊ®Îå¡£<BR><BR>¡¡¡¡{45}¡¶Ã÷Ê·¡·£¬ÁÐ´«µÚ¶þÊ®Îå¡£<BR><BR>¡¡¡¡{46}½¨ÎÄÃû³¼£¬Öìé¦ÆÆÄÏ¾©ºó±»×½£¬ÄþËÀ²»Çü£¬±»ÒÄ¡°Ê®×å¡±¡£<BR><BR>¡¡¡¡{47}ÀîÎÄÖÒÖ®×Ó£¬Öìé¦·¢¶¯¡°¾¸ÄÑÖ®ÒÛ¡±ºó£¬ÖìÔÊžÉÈÎÆäÎª´ó½«¾üÓ­µÐ£¬ÂÅÂÅ´ó°Ü¡£¡¶Ã÷Ê·¡·ÆÀÔ»£º¡°¹ó¹«×Ó£¬²»Öª±ø£¬Î©×Ô×ð´ó¡£¡±Öìé¦¾üÆÈ¶¼³ÇÖ®¼Ê£¬Àî¾°Â¡»ïÍ¬¹ÈÍõ™B¿ªÃÅÓ­½µ¡£<BR><BR>¡¡¡¡{48}ÊÂÊµÉÏ£¬À¶ÓñÔÚÊÀÊ±¾ÍÔøµÚÒ»¸ö·¢³öÑàÍõÐÄ»³²»¹ìµÄ¾¯¸æ¡£Ëû±±Õ÷ÄÉ¹þ³ö¹éÀ´£¬ÒÔ×Ô¼ºµÄ¹Û²ì½øÑÔÌ«×ÓÖì±ê£º¡°³¼¹ÛÑàÍõÔÚ¹ú£¬ÒõÓÐ²»³¼ÐÄ¡£¡±¶øÒ°Ê·¼ÇÔØ£¬À¶ÓñÊÂ·¢£¬Ò²ÕýÓëÖìé¦µÄÌô²¦ÓÐ¹Ø¡£<BR><BR>¡¡¡¡{49}ÄêºÅÕýÍ³¡¢ÌìË³£¬ÃíºÅÓ¢×Ú¡£<BR><BR>¡¡¡¡{50}ÄêºÅ³É»¯£¬ÃíºÅÏÜ×Ú¡£<BR><BR>¡¡¡¡{51}ÄêºÅÕýµÂ£¬ÃíºÅÎä×Ú¡£<BR><BR>¡¡¡¡{52}ÄêºÅ¼Î¾¸£¬ÃíºÅÊÀ×Ú¡£<BR><BR>¡¡¡¡{53}ÄêºÅÍòÀú£¬ÃíºÅÉñ×Ú¡£<BR><BR>¡¡¡¡{54}ÄêºÅÌìÆô£¬ÃíºÅìä×Ú¡£
+ã€€ã€€{1}å…ƒé¡ºå¸å¹´å·ã€‚<BR><BR>ã€€ã€€{2}æˆ‘ä¸ªäººä¸æŠŠæ±‰ä¹‹ä»£ç§¦ï¼Œè§†ä¸ºå†œæ°‘æš´åŠ¨çš„ç»“æžœã€‚æ±‰ä¹‹ä»£ç§¦ï¼Œåº”å±žäºŽæˆ˜å›½ä»¥æ¥â€œç§¦ï¼å…­å›½â€äº’åŠ¨å…³ç³»çš„è¿›ä¸€æ­¥æ¼”å˜ï¼Œé™ˆèƒœã€å´å¹¿èµ·ä¹‰åªæ˜¯è¿™ç§å…³ç³»çš„å…ˆæœŸæ•ˆåº”ã€‚æ­¤æ„ï¼Œæœç‰§çš„ã€Šé˜¿æˆ¿å®«èµ‹ã€‹åˆ†æžè§£é‡Šçš„æžæ˜¯ï¼šâ€œç­å…­å›½è€…ï¼Œå…­å›½ä¹Ÿï¼Œéžç§¦ä¹Ÿã€‚æ—ç§¦è€…ï¼Œç§¦ä¹Ÿï¼Œéžå¤©ä¸‹ä¹Ÿã€‚å—Ÿä¹Žï¼ä½¿å…­å›½å„çˆ±å…¶äººï¼Œåˆ™è¶³ä»¥æ‹’ç§¦ï¼›ä½¿ç§¦å¤çˆ±å…­å›½ä¹‹äººï¼Œåˆ™é€’ä¸‰ä¸–å¯è‡³ä¸‡ä¸–è€Œä¸ºå›ï¼Œè°å¾—è€Œæ—ç­ä¹Ÿï¼Ÿâ€<BR><BR>ã€€ã€€{3}{4}ã€Šæ˜Žå²ã€‹ï¼Œåˆ—ä¼ ç¬¬åå››ã€‚<BR><BR>ã€€ã€€{5}ã€Šæ˜Žå²ã€‹ï¼Œåˆ—ä¼ ç¬¬äºŒåã€‚<BR><BR>ã€€ã€€{6}ã€Šå¾¡åˆ¶çš‡é™µç¢‘ã€‹ã€‚<BR><BR>ã€€ã€€{7}ã€Šçš‡æ˜Žæœ¬çºªã€‹ï¼šâ€œã€å¤ªç¥–ã€‘å¤å…¥çš‡è§‰å¯ºï¼Œå§‹çŸ¥ç«‹å¿—å‹¤å­¦ã€‚â€<BR><BR>ã€€ã€€{8}ä½™ç»§ç™»ï¼šã€Šå…¸æ•…çºªé—»ã€‹ï¼Œå·ä¸€ã€‚<BR><BR>ã€€ã€€{9}å­Ÿæ˜¶ï¼Œäº”ä»£åå›½æ—¶æœŸåŽèœ€åŽä¸»ï¼Œå…¬å…ƒ934å¹´ï¼965å¹´åœ¨ä½ã€‚å›½äº¡ï¼Œé™å®‹ï¼Œå°ç§¦å›½å…¬ã€‚ä¼ æ­¤äººç©·å¥¢æžæ¬²ï¼Œè¿žæ’’å°¿çš„ä¾¿å™¨ï¼Œä¹Ÿæ˜¯çŽ‰å™¨é•¶ç€å®çŸ³åšæˆã€‚ä½†åŽäººæœ‰ç–‘æ­¤ä¸ºå®‹å¤ªç¥–èµµåŒ¡èƒ¤ä¸ºè´¥åå­Ÿæ˜¶åèª‰è€Œç¼–é€ çš„æ•…äº‹ï¼Œä¸Žè¿™è¯´æ³•ç›¸çŸ›ç›¾çš„ï¼Œæ®è¯´å­Ÿæ˜¶ä¸»èœ€æœŸé—´ï¼Œé¢‡å—ç™¾å§“çˆ±æˆ´ã€‚<BR><BR>ã€€ã€€{10}ä½™ç»§ç™»ï¼šã€Šå…¸æ•…çºªé—»ã€‹ï¼Œå·ä¸€ã€‚<BR><BR>ã€€ã€€{11}è§£ç¼™ï¼šã€Šå¤©æ½¢çŽ‰ç‰’ã€‹ã€‚æŒ‰ï¼Œæ­¤ä¹¦åŽŸä¸è‘—æ’°è€…åæ°ï¼Œä½†æ˜Žã€Šçºªå½•æ±‡ç¼–ã€‹ã€æ¸…ã€Šèƒœæœé—äº‹ã€‹æ”¶ç¼–æ­¤ä¹¦æ—¶ï¼Œé¢˜ä¸ºè§£ç¼™æ’°ã€‚æ­¤è¯´æœ‰ä¸€å®šåˆç†æ€§ï¼Œå› ã€Šå¤©æ½¢çŽ‰ç‰’ã€‹ç³»æœ±æ££ç¯¡ä½åŽï¼Œå‡ºäºŽæ¶‚æ”¹åŽ†å²éœ€è¦ï¼ŒæŽ¨å‡ºçš„è¯¸ç§å‡ºç‰ˆç‰©ä¹‹ä¸€ï¼Œè€Œè§£ç¼™ä½œä¸ºå½“æ—¶çš„ä¸»è¦æ–‡è‡£ï¼Œå¾ˆå¯èƒ½ä¼šä¸»æŒå®ƒçš„ç¼–å†™ã€‚å§‘å­˜ç–‘ã€‚<BR><BR>ã€€ã€€{12}æ— åæ°ï¼šã€Šç¿¦èƒœé‡Žé—»ã€‹ã€‚<BR><BR>ã€€ã€€{13}ã€Šå›½åˆäº‹è¿¹ã€‹ã€‚<BR><BR>ã€€ã€€{14}â€œä¸‰æ°â€ï¼ŒæŒ‡è§ä½•ã€éŸ©ä¿¡ã€å¼ è‰¯ã€‚<BR><BR>ã€€ã€€{15}æŽå–„é•¿ï¼Œå°éŸ©å›½å…¬ã€‚<BR><BR>ã€€ã€€{16}å¾è¾¾ï¼Œå°é­å›½å…¬ã€‚<BR><BR>ã€€ã€€{17}åˆ˜åŸºï¼ˆä¼¯æ¸©ï¼‰ï¼Œå°è¯šæ„ä¼¯ã€‚<BR><BR>ã€€ã€€{18}é‚“å£«é¾™è¾‘ï¼šã€Šå›½æœå…¸æ•…ã€‹ï¼Œé‡Žè®°ä¸€ã€‚<BR><BR>ã€€ã€€{19}å­Ÿæ£®ï¼šã€Šæ˜Žæ¸…å²è®²ä¹‰ã€‹ã€‚<BR><BR>ã€€ã€€{20}ã€Šæ˜Žå²ã€‹ï¼Œå¿—ç¬¬äº”åä¸‰ï¼Œé£Ÿè´§ä¸€ã€‚<BR><BR>ã€€ã€€{21}éŸ¦åº†è¿œï¼šã€Šæ˜Žä»£é»„å†Œåˆ¶åº¦ã€‹ã€‚<BR><BR>ã€€ã€€{22}å­Ÿæ£®ï¼šã€Šæ˜Žæ¸…å²è®²ä¹‰ã€‹ã€‚<BR><BR>ã€€ã€€{23}æ— åæ°ï¼šã€Šçš‡æ˜Žæœ¬çºªã€‹ã€‚<BR><BR>ã€€ã€€{24}ã€Šå…¸æ•…çºªé—»ã€‹ï¼Œå·ä¸€ã€‚ä»¥ä¸‹æ‰€è¿°è¯¸äº‹åŠæœ±å…ƒç’‹è¨€è®ºï¼Œå¤šæ®æ­¤ä¹¦ï¼Œä¸èµ˜ä¸€ä¸€ã€‚<BR><BR>ã€€ã€€{25}æœ±å…ƒç’‹ç”»åƒï¼Œæœ€è‘—åçš„æœ‰ä¸¤å¹…ï¼Œä¸€å­˜äºŽåŒ—äº¬æ•…å®«åšç‰©é™¢ï¼Œä¸€æ‚¬äºŽå—äº¬æ˜Žå­é™µäº«æ®¿å†…ï¼›å‰è€…ç³»å®«å»·ç”»å·¥ç¾ŽåŒ–ä¿®é¥°çš„ç»“æžœï¼ŒåŽè€…æ‰æŽ¥è¿‘æœ±å…ƒç’‹çœŸå®¹ï¼ŒçŽ°åœ¨ä¸­å­¦è¯¾æœ¬ä¸Šçš„æœ±å…ƒç’‹åƒæ‰€ä¾æ®çš„å°±æ˜¯è¿™ä¸€å¹…ã€‚<BR><BR>ã€€ã€€{26}{27}ã€Šæ˜Žå²ã€‹ï¼Œåˆ—ä¼ ç¬¬åäº”ã€‚<BR><BR>ã€€ã€€{28}ã€Šç¿¦èƒœé‡Žé—»ã€‹ã€‚<BR><BR>ã€€ã€€{29}ã€Šå›½æœå…¸æ•…ã€‹ï¼Œé‡Žè®°ä¸€ã€‚<BR><BR>ã€€ã€€{30}é™ˆå‹è°…çš„å¤´å·å¤§å°†ï¼Œæ›¾åœ¨é„±é˜³æ¹–ä¸€å½¹ä¸­é™©äº›æ´»æ‰æœ±å…ƒç’‹ã€‚<BR><BR>ã€€ã€€{31}è¢«çº¢å·¾å†›åˆ›å§‹äººåˆ˜ç¦é€šå¥‰ä¸ºä¸»ï¼Œç§°å¸ï¼Œå»ºå›½å·â€œå®‹â€ï¼Œçºªå…ƒé¾™å‡¤ã€‚æœ±å…ƒç’‹ä¸€ç›´å°šå¥‰å…¶å·ï¼›éŸ©æž—å„¿æ­»åŽç¬¬äºŒå¹´ï¼Œæ”¹ç§°å´å…ƒå¹´ï¼Œåˆæ˜Žå¹´æ”¹å›½å·â€œæ˜Žâ€ï¼Œæ”¹å…ƒæ´ªæ­¦ã€‚<BR><BR>ã€€ã€€{32}ã€ŠçŽ‰å ‚ä¸›è¯­ã€‹ï¼Œè¨€è¯­ã€‚<BR><BR>ã€€ã€€{33}ã€Šæ˜Žå²ã€‹ï¼Œåˆ—ä¼ ç¬¬äºŒåäº”ã€‚<BR><BR>ã€€ã€€{34}éƒŽç‘›ï¼šã€Šä¸ƒä¿®ç±»ç¨¿ã€‹ï¼Œå·ä¸‰åå››ã€‚<BR><BR>ã€€ã€€{35}åŒä¸Šï¼Œå·ä¸‰åä¸ƒã€‚<BR><BR>ã€€ã€€{36}èµµç¿¼ï¼šã€ŠäºŒåäºŒå²åŠ„è®°ã€‹ï¼Œå·ä¸‰åäºŒã€‚<BR><BR>ã€€ã€€{37}çš‡ç”«å½•ï¼šã€Šçš‡æ˜Žçºªç•¥ã€‹ï¼Œä¸ƒã€‚<BR><BR>ã€€ã€€{38}ã€Šæ˜Žå²ã€‹ï¼Œåˆ—ä¼ ç¬¬ä¸€ç™¾ä¸ƒåä¸‰ï¼Œæ–‡è‹‘ä¸€ã€‚<BR><BR>ã€€ã€€{39}ç¥å…æ˜Žï¼šã€Šé‡Žè®°ã€‹ã€‚<BR><BR>ã€€ã€€{40}é’±è°¦ç›Šï¼šã€Šåˆ—æœè¯—é›†ã€‹ï¼Œç”²é›†ï¼Œé«˜å¤ªå²å¯ã€‚<BR><BR>ã€€ã€€{41}å¾é‡šï¼šã€Šæœ¬äº‹è¯—ã€‹ã€‚<BR><BR>ã€€ã€€{42}ã€Šå­Ÿå­Â·æ¢æƒ çŽ‹ä¸‹ã€‹ã€‚<BR><BR>ã€€ã€€{43}ã€Šå­Ÿå­Â·ä¸‡ç« ä¸‹ã€‹ã€‚<BR><BR>ã€€ã€€{44}ã€Šé²’åŸ¼äº­é›†ã€‹ï¼Œå·ä¸‰åäº”ã€‚<BR><BR>ã€€ã€€{45}ã€Šæ˜Žå²ã€‹ï¼Œåˆ—ä¼ ç¬¬äºŒåäº”ã€‚<BR><BR>ã€€ã€€{46}å»ºæ–‡åè‡£ï¼Œæœ±æ££ç ´å—äº¬åŽè¢«æ‰ï¼Œå®æ­»ä¸å±ˆï¼Œè¢«å¤·â€œåæ—â€ã€‚<BR><BR>ã€€ã€€{47}æŽæ–‡å¿ ä¹‹å­ï¼Œæœ±æ££å‘åŠ¨â€œé–éš¾ä¹‹å½¹â€åŽï¼Œæœ±å…ç‚†ä»»å…¶ä¸ºå¤§å°†å†›è¿Žæ•Œï¼Œå±¡å±¡å¤§è´¥ã€‚ã€Šæ˜Žå²ã€‹è¯„æ›°ï¼šâ€œè´µå…¬å­ï¼Œä¸çŸ¥å…µï¼ŒæƒŸè‡ªå°Šå¤§ã€‚â€æœ±æ££å†›è¿«éƒ½åŸŽä¹‹é™…ï¼ŒæŽæ™¯éš†ä¼™åŒè°·çŽ‹æ©žå¼€é—¨è¿Žé™ã€‚<BR><BR>ã€€ã€€{48}äº‹å®žä¸Šï¼Œè“çŽ‰åœ¨ä¸–æ—¶å°±æ›¾ç¬¬ä¸€ä¸ªå‘å‡ºç‡•çŽ‹å¿ƒæ€€ä¸è½¨çš„è­¦å‘Šã€‚ä»–åŒ—å¾çº³å“ˆå‡ºå½’æ¥ï¼Œä»¥è‡ªå·±çš„è§‚å¯Ÿè¿›è¨€å¤ªå­æœ±æ ‡ï¼šâ€œè‡£è§‚ç‡•çŽ‹åœ¨å›½ï¼Œé˜´æœ‰ä¸è‡£å¿ƒã€‚â€è€Œé‡Žå²è®°è½½ï¼Œè“çŽ‰äº‹å‘ï¼Œä¹Ÿæ­£ä¸Žæœ±æ££çš„æŒ‘æ‹¨æœ‰å…³ã€‚<BR><BR>ã€€ã€€{49}å¹´å·æ­£ç»Ÿã€å¤©é¡ºï¼Œåº™å·è‹±å®—ã€‚<BR><BR>ã€€ã€€{50}å¹´å·æˆåŒ–ï¼Œåº™å·å®ªå®—ã€‚<BR><BR>ã€€ã€€{51}å¹´å·æ­£å¾·ï¼Œåº™å·æ­¦å®—ã€‚<BR><BR>ã€€ã€€{52}å¹´å·å˜‰é–ï¼Œåº™å·ä¸–å®—ã€‚<BR><BR>ã€€ã€€{53}å¹´å·ä¸‡åŽ†ï¼Œåº™å·ç¥žå®—ã€‚<BR><BR>ã€€ã€€{54}å¹´å·å¤©å¯ï¼Œåº™å·ç†¹å®—ã€‚
 <!--/HTMLBUILERPART0-->
-<p>¡¡¡¡<font class=f4>¡ù°æ±¾³ö´¦£ºÐÂÀË¶ÁÊéÆµµÀ¡ù</font>
+<p>ã€€ã€€<font class=f4>â€»ç‰ˆæœ¬å‡ºå¤„ï¼šæ–°æµªè¯»ä¹¦é¢‘é“â€»</font>
 </span>
 </td>
 </tr>
@@ -92,16 +92,16 @@
 </table>
 <table align=center class=tb2 border=0 cellspacing=0 cellpadding=0>
 <tr align=center>
-<td class=d53><a href=10.htm class=f5>ÉÏÒ»Ò³</a></td>
-<td class=d54><a href=index.html class=f5>»ØÄ¿Â¼</a></td>
-<td class=d55><a href=12.htm class=f5>ÏÂÒ»Ò³</a></td>
+<td class=d53><a href=10.htm class=f5>ä¸Šä¸€é¡µ</a></td>
+<td class=d54><a href=index.html class=f5>å›žç›®å½•</a></td>
+<td class=d55><a href=12.htm class=f5>ä¸‹ä¸€é¡µ</a></td>
 </tr>
 </table>
 <table frame=above rules=none align=center class=tb3 border=1 cellspacing=1 cellpadding=0 bordercolorlight=#c7c8d0 bordercolordark=#eeeeee>
 <tr align=center>
-<td class=d81><font class=f2>¡°Ò×Ë®Î÷·ç¡±EÊé×÷Æ·</font></td>
+<td class=d81><font class=f2>â€œæ˜“æ°´è¥¿é£Žâ€Eä¹¦ä½œå“</font></td>
 <td class=d83><font class=f2>-11-</font></td>
-<td class=d82><font class=f2>¸ü¶à¾«²ÊEÊéÇë·ÃÎÊ¡°<a href=http://www.52ebook.com class=f8>52ebook</a>¡±</font></td>
+<td class=d82><font class=f2>æ›´å¤šç²¾å½©Eä¹¦è¯·è®¿é—®â€œ<a href=http://www.52ebook.com class=f8>52ebook</a>â€</font></td>
 </tr>
 </table>
 <table align=center class=tb4 border=0 cellspacing=0 cellpadding=0>
@@ -122,20 +122,20 @@
 <tr>
 <td class=dbottom1><script language="javascript" src="jscss/date_time.js"></script></td>
 <td class=dbottom2><font class=f9><script language="javascript" src="jscss/message.js"></script></font></td>
-<td class=dbottom3><font class=f9>×¢ÊÍ</font></td>
+<td class=dbottom3><font class=f9>æ³¨é‡Š</font></td>
 </tr>
 </table>
 </div>
 <div class=toolbar2>
 <table frame=box rules=all align=center class=tlink border=1 cellspacing=2 cellpadding=0 bordercolorlight=#504f64 bordercolordark=#b4b2cc>
 <tr align=center>
-<td><a href=#top class=fl><img src=image/top.gif border=0 alt=Ò³Ê×></a></td>
+<td><a href=#top class=fl><img src=image/top.gif border=0 alt=é¡µé¦–></a></td>
 </tr>
 <tr align=center>
-<td><a href=10.htm class=fl><img src=image/back.gif border=0 alt=ÉÏÒ³></a><a href=index.html class=fl><img src=image/return.gif border=0 alt=Ä¿Â¼></a><a href=12.htm class=fl><img src=image/next.gif border=0 alt=ÏÂÒ³></a></td>
+<td><a href=10.htm class=fl><img src=image/back.gif border=0 alt=ä¸Šé¡µ></a><a href=index.html class=fl><img src=image/return.gif border=0 alt=ç›®å½•></a><a href=12.htm class=fl><img src=image/next.gif border=0 alt=ä¸‹é¡µ></a></td>
 </tr>
 <tr align=center>
-<td><a href=#bottom class=fl><img src=image/bottom.gif border=0 alt=Ò³Î²></a></td>
+<td><a href=#bottom class=fl><img src=image/bottom.gif border=0 alt=é¡µå°¾></a></td>
 </tr>
 </table>
 </div>
