--- a/fav/book/safari/letter-from-an-unknown-woman/text/part0007_split_000.html
+++ b/fav/book/safari/letter-from-an-unknown-woman/text/part0007_split_000.html
@@ -27,4 +27,14 @@
 <p class="calibre2">次日，士兵们进来，要将这八十四个囚犯带上刑场时，他们已经醒来，并且已经准备充分。只有隔壁那对新人住的房间还没有动静，即使是枪杆碰撞的声音也未能将他们吵醒。于是那位傧相就轻声跑进屋里，以免刽子手粗暴地将他们叫醒。他们躺在那里，依偎着抱在一起。新娘的手在新郎的脖子后面，似乎是忘了抽回来。即使是在睡梦中，他们的脸上也洋溢着幸福，使得朋友都不忍心就这样扰乱了他们这片刻的平静。但是他不能迟疑，他摇醒新郎，着急地告诉他他们现在身处何方。新郎迷迷糊糊地睁开眼睛，猛然意识到自己的处境，然后温柔地扶起自己的妻子。新娘睁开眼睛，因为这冷冰冰的现实来得过于突然，她像个孩子般吓了一跳。但很快，她冲丈夫会心一笑，说道：“我已经准备好了。”</p>
 <p class="calibre2">新人手牵手走进外屋，大家不由自主地纷纷为他们让路。无意间，这对夫妇就成了领头人，带着大家走向死亡之路。尽管人们对这些走向刑场的悲伤的队伍已经习以为常，但这次，人们还是惊讶地望着这条特殊的队伍。因为带头的这两个人——一个青年军官和一个戴着新娘花冠的少女，全身散发着非比寻常的喜悦，近乎是极乐之情。即使是麻木之人也会十分敬畏地感觉到个中奥秘，即使是其他犯人也不像往昔走向刑场的犯人那样步伐沉重。他们都坚定地看着这对新人，这对出乎意料地实现了自己愿望的新人。他们的目光是那么明亮，充满了坚定的信念。一定还会有奇迹降临在这两人身上！而这最后的奇迹，就是将他们从死亡中拯救。</p>
 <div class="calibre15" id="calibre_pb_1"></div>
-</body></html>
+
+
+<p class="picture"><img src="../images/00010.jpeg" alt="" class="calibre3"/></p>
+<p class="picture"><small class="calibre14">她冲丈夫会心一笑，说道：“我已经准备好了。”</small></p>
+<div class="calibre15" id="calibre_pb_3"></div>
+
+
+<p class="calibre2">然而，生活中的确充满了奇妙的事情，但真正的奇迹却是很少。和往昔一样，在里昂每天都进行的事情还是发生了。这队人被带过大桥，带到博罗托沼泽地。在那里，有十二个步兵正等待着他们，平均每个人被三只步枪瞄准。这些囚犯被一队队地排好，子弹齐发，他们一排排地倒下。接着，士兵们将还在流血的尸体扔进罗纳河中，湍急的水流毫无怜悯地将这些陌生人沉入河底。只有从那沉入河底的新娘的头上浮起的花冠，还在水波中漫无目的地漂浮着。最终，它也消失了。随之逝去的，还有那从死神手中夺得的、值得纪念的新婚之夜。</p>
+
+
+  </body></html>
