--- a/fav/book/safari/letter-from-an-unknown-woman/text/part0008_split_000.html
+++ b/fav/book/safari/letter-from-an-unknown-woman/text/part0008_split_000.html
@@ -45,4 +45,14 @@
 <p class="calibre2">“这时他的手颤抖地抚摸着空荡荡的画夹——这一幕令人不寒而栗。在战争年代，我头一次在一个德国人脸上看到这样纯真而完美的表情！他旁边的带着惊骇的面孔的妻女，像极了他那幅蚀刻画上的来此瞻仰她们的救世主的女性形象。站在被挖掘一空的坟墓前，她们的惊慌中满是虔诚，又怀有极度的喜悦。她们，穷苦的她们，似乎也被老人孩子般的喜悦所感染，喜忧参半。这个场景是我见过的最动人、最美好的。这位老者并不满足于我的称赞，他不停地翻着这些画页。当最后这些骗人的画夹被放到一边、老人不得不把桌子腾出空间来放咖啡时，我才感觉又恢复了正常。他向我讲述了成千上万个淘到这些珍品的故事，其间又一次次地站起来，又开始一张一张地从画夹里抽出画作。当最后我说我必须离开时，他又像个孩子一样恼火了，使劲跺着脚说这可不行，我几乎连一半作品都还没看完呢。他的妻子和女儿也费了很大力气才说服他，说我必须得走了，否则迟到的话就赶不上火车了。</p>
 <p class="calibre2">“当我们最后说再见的时候，他的声音变得相当虚弱。他握住我的双手说道：‘您的到访给我带来了极大的快乐。这真是太好了，终于……终于……终于能够有机会与一位行家共同欣赏我最喜欢的收藏了。而您也应该看见了，您到我这个上了年纪的、眼盲的老人这儿来并不是白跑一趟。今天我愿意当着您的面，让我的妻子作为见证人，向您保证，在我离开人世之后把我的收藏全部委托贵古董店来进行拍卖，其他任何人不得插手。您应该得到管理这些不为人知的收藏的权力。请您答应我，为我制作一本精美的收藏目录，就把收藏目录作为我的墓志铭，这是我认为最重要的东西了。’</p>
 <div class="calibre15" id="calibre_pb_1"></div>
-</body></html>
+
+<p class="picture"><img src="../images/00011.jpeg" alt="" class="calibre3"/></p>
+<p class="picture"><small class="calibre14">这时他的手颤抖地抚摸着空荡荡的画夹——这一幕令人不寒而栗。</small></p>
+<div class="calibre15" id="calibre_pb_3"></div>
+
+<p class="calibre2">“我向他的妻女望去，她们吓得在一旁战栗着。可我却饱含激动和感恩，被这位业已看不见又一无所知的盲人把他早已不知在何方的珍宝委托给我而心疼、感动着。我答应了他，尽管我知道，我无论如何也无法遵守这个约定。我感到他是那么信任我，他的手指是那么温柔而亲切。</p>
+<p class="calibre2">“两位女士送我出了门。她们不敢有任何言语，因为这位看不见的老人的听觉相当灵敏，他能听清我们说的每句话。但她们却向我报以感激的目光！我像仍身处梦境一般下了楼梯。我感觉自己像犯了罪一样：我来到这些可怜人的陋室，使得这位盲眼老人像是获得了一小时的视力一般。我参与了一场欺骗行动，还向他撒了谎。我，实际上是以一个古董商的身份来的，本想从老主顾身上低价买回一些有价值的古董。但我参与的事要多得多：在这个令人悲伤的时代，我再次真切感受到了纯粹的快乐。</p>
+<p class="calibre2">“我已经走到了大街上，这时听见楼上开窗户的声音，有人在上面喊我的名字。是真的，那位老者不顾家人劝阻，用他那双早已失明的双眼望向我应该走的方向。他冲着我的方向摇动手帕，喊道：‘祝您一路顺风！’窗口那儿是老人快乐而矍铄的面庞，他下面却是行色匆匆、愁云满面的人们，行走在令人厌恶的街道上。他和他们形成了鲜明的对比。我永远都不会忘记这一瞬间，此时我又想起一句老话——我相信这句话是歌德说过的——‘收藏家是幸福的人！’”</p>
+
+
+  </body></html>
