--- a/about.html
+++ b/about.html
@@ -124,7 +124,7 @@
                 <a href="/fav/google/"><i class="fa fa-google-plus"></i></a>
             </div>
             <div class="col-lg-2">
-                <a href="/fav/diary/"><i class="fa fa-paper-plane-o"></i></a>
+                <a href="https://github.com/hiclick/hiclick.github.com"><i class="fa fa-github"></i></a>
             </div>
             <div class="col-lg-2">
                 <a class="fancybox" rel="group" href="/assets/img/fav/QQ-QR.jpg"><i class="fa fa-qq"></i></a>
