--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 <a href="/fav/music/"><i class="fa fa-music"></i></a>
             </div>
             <div class="col-lg-2">
-                <a href="/fav/photo/"><i class="fa fa-camera-retro"></i></a>
+                <a href="/fav/diary/"><i class="fa fa-paper-plane-o"></i></a>
             </div>
             <div class="col-lg-2">
                 <a href="/fav/movie/"><i class="fa fa-film"></i></a>
