--- a/work.html
+++ b/work.html
@@ -195,10 +195,10 @@
     <div class="container">
         <div class="row centered">
             <div class="col-lg-2">
-                <a href="/doc/soft/#docs/osx"><i class="fa fa-apple"></i></a>
+                <a href="/doc/soft/#docs/windows"><i class="fa fa-windows"></i></a>
             </div>
             <div class="col-lg-2">
-                <a href="/doc/soft/#docs/windows"><i class="fa fa-windows"></i></a>
+                <a href="/doc/soft/#docs/osx"><i class="fa fa-apple"></i></a>
             </div>
             <div class="col-lg-2">
                 <a href="/doc/soft/#docs/linux"><i class="fa fa-linux"></i></a>
@@ -210,7 +210,7 @@
                 <a href="/fav/cloud/"><i class="fa fa-cloud"></i></a>
             </div>
             <div class="col-lg-2">
-                <a href="https://github.com/hiclick/hiclick.github.com"><i class="fa fa-github"></i></a>
+                <a href="/fav/photo/"><i class="fa fa-camera-retro"></i></a>
             </div>
 
         </div>
