更新作品列表

--- a/work.html
+++ b/work.html
@@ -123,18 +123,21 @@
 
         <table class="table table-striped">
             <tr>
+                <td>01.</td>
                 <td>Tenement</td>
                 <td>Java + Struts + Versant Open Access JDO + Resin</td>
                 <td>Code</td>
             </tr>
 
             <tr>
+                <td>02.</td>
                 <td>iTouch</td>
                 <td>Java + Struts + JDO + Spring1.2 + AS2.0 + Resin</td>
                 <td>Code</td>
             </tr>
 
             <tr>
+                <td>03.</td>
                 <td>Play</td>
                 <td>Java + Struts + JDO + AS3.0 + Resin</td>
                 <td>Code</td>
@@ -142,46 +145,88 @@
 
 
             <tr>
+                <td>04.</td>
                 <td><a href="http://mobile.pconline.com.cn/review/0806/1325149.html" target="_blank">Dopod Diamond
                     Emulator</a></td>
-                <td>ActionScript 3.0</td>
+                <td>Flash CS3 + ActionScript 3.0</td>
                 <td>Code</td>
             </tr>
 
             <tr>
+                <td>05.</td>
                 <td>Meeting Room</td>
                 <td>Java + Spring2.5 + ExtJS + jQuery + MySQL</td>
                 <td>Code</td>
             </tr>
 
             <tr>
+                <td>06.</td>
                 <td>Work Orders</td>
                 <td> Java + Spring2.5 + OpenJPA + Resin + Oracle</td>
                 <td>PM</td>
             </tr>
 
             <tr>
+                <td>07.</td>
                 <td><a href="http://health.pcbaby.com.cn/" target="_blank">PCbaby Healthlib</a></td>
                 <td>Java + Spring2.5 + MySQL + Memcache</td>
                 <td>PM</td>
             </tr>
 
             <tr>
+                <td>08.</td>
                 <td><a href="http://product.pcbaby.com.cn/" target="_blank">PCbaby Product</a></td>
                 <td>Java + Spring2.5 + EAV + ExtJS + MySQL + Memcache</td>
                 <td>PM</td>
             </tr>
 
             <tr>
+                <td>09.</td>
                 <td>NetBench</td>
                 <td>Java + Spring3.0 + ExtJS + MySQL</td>
                 <td>PM</td>
             </tr>
 
             <tr>
+                <td>10.</td>
                 <td><a href="https://github.com/chenzixin/Lucky5" target="_blank">Lucky5</a></td>
                 <td>HTML5 + CSS3 + Impress + jQuery</td>
                 <td>PM</td>
+            </tr>
+
+            <tr>
+                <td>11.</td>
+                <td>OA Helper</td>
+                <td>HTML5 + jQuery + Chrome extensions</td>
+                <td>PD</td>
+            </tr>
+
+            <tr>
+                <td>12.</td>
+                <td>Calendar</td>
+                <td>Java + Spring3.5 + ExtJS</td>
+                <td>PD</td>
+            </tr>
+
+            <tr>
+                <td>13.</td>
+                <td>iComment</td>
+                <td>Java + Spring3.5 + Bootstrap + eCharts</td>
+                <td>PD</td>
+            </tr>
+
+            <tr>
+                <td>14.</td>
+                <td>Printer</td>
+                <td>AAuto + HTML + jQuery EasyUI</td>
+                <td>PD</td>
+            </tr>
+
+            <tr>
+                <td>15.</td>
+                <td>AD MGR</td>
+                <td>Java + Spring3.5 + ExtJS + Markdown</td>
+                <td>PD</td>
             </tr>
 
         </table>
