--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
 
     <!-- Bootstrap core JavaScript -->
 
-    <script src="http://libs.useso.com/js/jquery/1.11.0/jquery.min.js"></script>
+    <script src="http://cdn.bootcss.com/jquery/1.11.0/jquery.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
 
 
@@ -43,8 +43,8 @@
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
-    <script src="http://libs.useso.com/js/html5shiv/3.7/html5shiv.js"></script>
-    <script src="http://libs.useso.com/js/respond.js/1.4.2/respond.min.js"></script>
+    <script src="http://cdn.bootcss.com/html5shiv/r29/html5.min.js"></script>
+    <script src="http://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
 
